test/zinc_source/compile_errors/enums/15_method_variant_name_collision.zn
// expected-error: enum 'Message' has both a variant and method named 'Quit'
enum Message {
    Quit

    fn Quit() {
        print("bad")
    }
}

fn main() {
    print(Message.Quit)
}
